--- a/.env
+++ b/.env
@@ -56,4 +56,4 @@ LOCAL_SCRIPT_DEBUG=false
 # LOCAL_WP_ENVIRONMENT_TYPE=local
 
 # The URL to use when running e2e tests.
-WP_BASE_URL=http://opendata.foreign.gov.kn/
+WP_BASE_URL=http://localhost:${LOCAL_PORT}
