--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ wp-tests-config.php
 /src/wp-content/languages
 /src/wp-content/mu-plugins
 /src/wp-content/plugins/*
+!/src/wp-content/plugins/wp-erp
 !/src/wp-content/plugins/wp-data-access
 /src/wp-content/themes/*
 !/src/wp-content/themes/twentyten
